--- a/public/style.css
+++ b/public/style.css
@@ -129,7 +129,7 @@ body, html{
 }
 
 .profilePic {
-    width: 35%;
+    width: 28%;
     height: auto;
     position: fixed;
     top: 6%;
@@ -395,3 +395,47 @@ body, html{
     border: 1px solid rgb(131, 130, 130);
     background-color: white;
 }
+
+.dropbtn {
+    background-color: black;
+    color: gray;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown-content button {
+      border-color: #f1f1f1;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: bla;
+  }
