Latest changes to view other profiles

--- a/public/style.css
+++ b/public/style.css
@@ -136,6 +136,9 @@ body, html{
     /* transform: translate(-30%, 120%); */
     border-radius: 50%;  
 }
+.checked {
+    color: orange;
+  }
 
 .profilePic {
     width: 35%;
