--- a/public/style.css
+++ b/public/style.css
@@ -129,7 +129,7 @@ body, html{
 }
 
 .profilePic {
-    width: 35%;
+    width: 28%;
     height: auto;
     position: fixed;
     top: 6%;
@@ -370,6 +370,32 @@ body, html{
     text-align: center;
 }
 
+.getLocation {
+    width: 50%;
+    height: 25%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 55%;
+    transform: translate(-60%, -150%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
+
+.updateLocation {
+    width: 100%;
+    height: 25%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 55%;
+    transform: translate(-55%, -150%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
+
 .dropbtn {
     background-color: black;
     color: gray;
@@ -412,4 +438,103 @@ body, html{
   
   .dropdown:hover .dropbtn {
     background-color: bla;
+  }
+
+  .displayUsers {
+    border-radius: 0%;
+    width: 25%;
+    height: 50%;
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    float: left;
+    display: table;
+    color: white;
+    border: 1px solid black;
+    border-radius: 2%;
+    background-color: black;
+}
+
+.image_display {
+    border-radius: 3%;
+    border: 1px solid gray;
+    width: 25%;
+    height: 35%;
+    margin-top: 3%;
+}
+
+.bg_modal{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    position: absolute;
+    top: 0;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 1;
+}
+.bg_modal2{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    display: none;
+    
+ z-index: 1;
+}
+
+
+.modal-content
+{
+    width:500px; 
+    height: 200px;
+    background-color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+}
+.big_img{
+    margin: 10px 50px;
+    position: relative;
+
+}
+.pic_1 img{
+    width: 230px;
+    padding: 5px;
+    float: left;
+    filter: grayscale(100%);
+    transition: 0.1s;
+    z-index: 0;
+    position: relative;
+}
+.pic_1 img:hover{
+    filter: grayscale(0%);
+}
+
+.profile22 {
+    width: 45%;
+    height: 80%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 45%;
+    transform: translate(-43%, 20%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
+.circle_pic img
+{
+    top: 15%;
+    
+    /* transform: translate(-30%, 120%); */
+    border-radius: 50%;  
+}
+.checked {
+    color: orange;
   }
