--- a/public/style.css
+++ b/public/style.css
@@ -35,8 +35,9 @@ body, html{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: local;
+    background-attachment: fixed;
 }
+
 
 .setProfile {
     width: 50%;
@@ -49,6 +50,54 @@ body, html{
     border-radius: 3%;
     background-color: white;
     border: 1px solid gray;
+}
+
+.filterProfile {
+    width: 50%;
+    height: 120%;
+    text-align: center;
+    position: relative;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 3%;
+    background-color: white;
+    border: 1px solid gray;
+}
+
+.filterInterests{
+    text-align: center;
+    margin-bottom: 30%;
+}
+
+.displayFilterTags{
+    width: 100%;
+    height: 50%;
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    float: left;
+    display: table;
+}
+
+.FiltertagBlocks {
+    width: 31%;
+    background-color: #b9b9b9;
+    margin-top: 2%;
+    float: inherit;
+    border: 1px solid white;
+    border-radius: 2%;
+    word-wrap: break-word; 
+}
+
+.sort{
+    width: 7%;
+    height: 20%;
+    position: relative;
+    top: 65%;
+    left: 50%;
+    transform: translate(490%, 0%);
+    text-align: center;
 }
 
 .setProfile2 {
@@ -117,10 +166,10 @@ body, html{
 
 .profile {
     width: 45%;
-    height: 80%;
+    height: 100%;
     text-align: center;
     position: relative;
-    top: 45%;
+    top: 50%;
     left: 45%;
     transform: translate(15%, -50%);
     border-radius: 3%;
@@ -151,10 +200,10 @@ body, html{
 
 .profile1 {
     width: 45%;
-    height: 80%;
+    height: 100%;
     text-align: center;
     position: relative;
-    top: 45%;
+    top: 50%;
     left: 55%;
     transform: translate(-115%, -150%);
     border-radius: 3%;
@@ -319,7 +368,18 @@ body, html{
     position: unset;
     top: 0%;
     left: 50%;
-    transform: translate(21%, 95%);
+    transform: translate(21%, 55%);
+    width: 30%;
+    border: 1px solid grey;
+    border-radius: inherit;
+    width: 70%;
+}
+
+.userInfo2 {
+    position: unset;
+    top: 0%;
+    left: 50%;
+    transform: translate(21%, 90%);
     width: 30%;
     border: 1px solid grey;
     border-radius: inherit;
@@ -439,3 +499,151 @@ body, html{
   .dropdown:hover .dropbtn {
     background-color: bla;
   }
+
+  .displayUsers {
+    border-radius: 0%;
+    width: 25%;
+    height: 250px;
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    float: left;
+    display: table;
+    color: black;
+    border: 1px solid black;
+    border-radius: 2%;
+    background-color: #9e2e2e;
+    text-align: center;
+    font-size: medium;
+}
+
+.users_display {
+    border-radius: 3%;
+    border: 1px solid gray;
+    width: 40%;
+    margin-top: 3%;
+}
+
+.image_display {
+    border-radius: 3%;
+    border: 1px solid gray;
+    width: 25%;
+    height: 35%;
+    margin-top: 3%;
+}
+
+.bg_modal{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    position: absolute;
+    top: 0;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 1;
+}
+.bg_modal2{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    display: none;
+    
+ z-index: 1;
+}
+
+
+.modal-content
+{
+    width:500px; 
+    height: 200px;
+    background-color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+}
+.big_img{
+    margin: 10px 50px;
+    position: relative;
+
+}
+.pic_1 img{
+    width: 230px;
+    padding: 5px;
+    float: left;
+    filter: grayscale(100%);
+    transition: 0.1s;
+    z-index: 0;
+    position: relative;
+}
+.pic_1 img:hover{
+    filter: grayscale(0%);
+}
+
+.profile22 {
+    width: 45%;
+    height: 80%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 45%;
+    transform: translate(-43%, 20%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
+.circle_pic img
+{
+    top: 15%;
+    
+    /* transform: translate(-30%, 120%); */
+    border-radius: 50%;  
+}
+.checked {
+    color: orange;
+  }
+
+  *{
+    margin: 0;
+    padding: 0;
+}
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
+}
