--- a/views/usersProfile.ejs
+++ b/views/usersProfile.ejs
@@ -116,9 +116,6 @@
     <label>Surname</label>
     <p><%=surname%></p>
 
-    <label>Email</label>
-    <p><%=email%></p>
-
     <label>Username</label>
     <p><%=username%></p>
 
@@ -132,6 +129,7 @@
     <p><%=pref_gender%></p>
 
     <label>location</label>
+    <p><%=location%></p>
     </div>
 </div>
 
