--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="../helpers/helper1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Home</title>
   </head>
@@ -81,14 +82,14 @@
                 <img src="<%=userData[j].image_path%>" class="users_display" id="<%=userData[j].id%>" alt="...">
                 <h3><%=userData[j].username%></h3>
                 <p>age: <%=userData[j].age%></p>
-                <p>gender: <%=userData[j].gender%></p>
-
-                
+                <p>gender: <%=userData[j].gender%></p>    
+              
                 <button type="submit" class="btn btn-danger btn-block my-4">View Profile</button>
             </div>
           </form>
           <%   }} 
      } %>  
+     
   </div>
 </body>
 </html>
