--- a/views/update_profile.ejs
+++ b/views/update_profile.ejs
@@ -10,6 +10,7 @@
 
     <meta charset="utf-8" />
     <script type="text/javascript" src="../helpers/helper1.js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
     <title>Update Profile</title>
 
   </head>
@@ -180,16 +181,12 @@
       <hr />
       <br />
       <div class="updateLocation">
-        <label for="location">Allow Matcha to access your location?</label> <br />
+        <label for="location">location</label> <br />
         <br />
-        <button onclick="getLocation()">Update location</button>
         <form action="/location" method="POST">
-          <input type="hidden" name="lat" id="lat" required>
-          <input type="hidden" name="lng" id="lng" required>
-  
-          <br /><br />
+         <br/><br/>
           <button type="submit" class="btn btn-danger btn-block my-4">
-            Update
+            Update Location
           </button>
         </form>
       </div>
@@ -260,17 +257,20 @@
 </html>
 
 <script>
-  function getLocation() {
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(showPosition);
-    } else {
-      x.innerHTML = "Geolocation is not supported by this browser.";
-    }
-  }
-  function showPosition(position) {
-        const lat = document.querySelector('#lat');
-        const lng = document.querySelector('#lng');
-        lat.value = position.coords.latitude;
-        lng.value = position.coords.longitude;
-    }
+  // function getLocation() {
+  //   if (navigator.geolocation) {
+  //     navigator.geolocation.getCurrentPosition(showPosition);
+  //   } else {
+  //     x.innerHTML = "Geolocation is not supported by this browser.";
+  //   }
+  // }
+  // function showPosition(position) {
+  //       const lat = document.querySelector('#lat');
+  //       const lng = document.querySelector('#lng');
+  //       lat.value = position.coords.latitude;
+  //       lng.value = position.coords.longitude;
+  //   }
+
+
+
 </script>
