--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,6 +26,7 @@
         <li><a href="/search_user">Search users</a></li>
         <li><a href="/chat">Chat</a></li>
         <li><a href="/filter">Filter</a></li>
+        <li><a href="/userHistory">User History</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
