--- a/views/set_profile.ejs
+++ b/views/set_profile.ejs
@@ -20,7 +20,7 @@
           <a class="navbar-brand">Matcha</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="#"> Search</a></li>
+          <li><a href="/search_user">Search users</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
