--- a/views/update_profile.ejs
+++ b/views/update_profile.ejs
@@ -27,6 +27,7 @@
             <li><a href="/search_user">Search users</a></li>
             <li><a href="/chat">Chat</a></li>
             <li><a href="/filter">Filter</a></li>
+            <li><a href="/userHistory">User History</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> <%=username%></a></li>
